--- a/css/style.css
+++ b/css/style.css
@@ -696,4 +696,213 @@ header .header__dark {
 }
 
 /* ---challenges--------- */
+#challenge {
+    background-color: #f7f7f7;
+  }
+  #challenge .challenge__container {
+    padding: 4rem 0;
+  }
+  #challenge .challenge__title p:nth-child(1) {
+    color: #7e7d7d;
+    text-transform: uppercase;
+    font-size: 1rem;
+    font-weight: 600;
+    margin-bottom: 0.2rem;
+    margin-top: 4rem;
+  }
+  #challenge .challenge__title p {
+    /* color: gray; */
+    color: #838383;
+    font-size: 1rem;
+  }
+  #challenge .challenge__title h1 {
+    color: #3f3a64;
+    font-size: 2rem;
+    font-weight: bold;
+    padding-bottom: 1rem;
+  }
+  #challenge .challenge__content {
+    background-color: white;
+    padding: 2rem 3rem;
+    margin: 0.9rem 0;
+    text-align: center;
+    border-radius: 0.5rem;
+    transition: transform 0.4s;
+  }
+  
+  #challenge .challenge__content:hover {
+    transform: translateY(-15px);
+    box-shadow: rgb(46 41 51 / 8%) 0px 2px 4px, rgb(71 63 79 / 16%) 0px 5px 10px;
+  }
+  #challenge .challenge__content p {
+    padding-top: 1.5rem;
+    font-weight: 650;
+    font-size: 1.3rem;
+    color: #3f3a64;
+  }
+  #challenge .challenge__content p:hover {
+    color: rgb(10, 135, 10);
+  }
+  /* sevice */
+  #sevice .sevice__title h1 {
+    color: #3f3a64;
+    text-align: center;
+    font-size: 2rem;
+    font-weight: 700;
+    padding-bottom: 2rem;
+    padding-top: 5rem;
+  }
+  
+  #sevice .sevice__select img {
+    object-fit: contain;
+    width: 100%;
+    border-top-left-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
+    overflow: hidden;
+  }
+  
+  .sevice__card-image {
+    position: relative;
+  }
+  .sevice__select .row {
+    justify-content: center;
+  }
+  .sevice__select .btn__sevice {
+    bottom: 1.5rem;
+    left: 50%;
+    position: relative;
+    transform: translateX(-50%);
+    color: #3f3a64;
+    font-size: 1.1rem;
+    padding: 0.8rem 3rem;
+    font-weight: bold;
+    border-radius: 0.5rem;
+    border: white;
+    background-color: white;
+    box-shadow: 0 0 2px rgb(193, 190, 190);
+  }
+  .sevice__select .btn__sevice:hover {
+    color: rgb(58, 123, 58);
+  }
+  .sevice__select p {
+    color: #7e7d7d;
+    font-weight: 500;
+    text-align: center;
+  }
+  .sevice__select .btn__learMore {
+    text-align: center;
+    margin: 1.5rem auto;
+    display: block;
+    padding: 0.5rem 2.5rem;
+    background-color: white;
+    border-radius: 0.5rem;
+    border: white;
+    color: #3f3a64;
+    font-weight: 700;
+  }
+  .sevice__select .btn__learMore:focus {
+    outline: #79b4adb5 solid 3px;
+  }
+  .sevice__select .btn__learMore:hover {
+    color: rgb(58, 123, 58);
+  }
+  .sevice__select .sevice__card {
+    padding-bottom: 3rem;
+  }
+  /* gallery */
+
+#gallery {
+    background-color: #f8f9fa;
+    padding: 3rem 0;
+}
+.dark #gallery {
+    background-color: #100f19;
+}
+
+#gallery .container {
+    text-align: center;
+}
+
+#gallery .gallery__content {
+    border-bottom: 1px solid #eee;
+}
+.dark #gallery .gallery__content {
+    border-bottom: 1px solid rgba(255, 255, 255, .1);
+}
+
+#gallery .zoom img {
+    width: 100%;
+    transition: 0.3s ease-in-out;
+    display: block !important;
+}
+
+#gallery .zoom:hover img {
+    transform: scale(1.1);
+
+}
+
+#gallery .zoom {
+    overflow: hidden;
+    position: relative;
+    display: block !important;
+    margin-bottom: 30px;
+}
+
+#gallery .overlay {
+    background-color: #1d2a37b3;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0;
+}
+
+#gallery .zoom:hover .overlay {
+    background-color: #1d2a37b3;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 1;
+}
+
+#gallery .text__gallery {
+    position: absolute;
+    bottom: -30px;
+    left: 30px;
+    text-align: left;
+    right: 10px;
+    opacity: 0;
+}
+
+#gallery .zoom:hover .text__gallery {
+    position: absolute;
+    bottom: 30px;
+    left: 30px;
+    text-align: left;
+    right: 10px;
+    opacity: 1;
+    transition: all 0.5s;
+}
+
+#gallery .text__gallery h4 {
+    margin-bottom: 0rem;
+    color: #fff;
+}
+
+#gallery .text__gallery p {
+    margin-bottom: 0rem;
+    color: #FFF;
+}
+
+#gallery .brand {
+    padding: 10px;
+    justify-content: center;
+}
+
+#gallery .brand img {
+    width: 100%;
+}
 
